--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.5.1",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.11",
